<resources>
    <string name="app_name">VremeaRO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="TextPrezentare">Bucuresti</string>
    <string name="butonDetalii">Detalii</string>
    <string name="text_prezentare">București este capitala României. \nEste cel mai populat oraș și cel mai important centru industrial și comercial al țării. \nPopulația de 1.883.425 de locuitori face ca Bucureștiul să fie al zecelea oraș ca populație din Uniunea Europeană. \nConform unor estimări ale unor specialiști, Bucureștiul adună zilnic peste trei milioane de oameni, iar în următorii cinci ani, acest număr va depăși patru milioane.\nLa acestea se adaugă faptul că localitățile din preajma orașului, care vor face parte din viitoarea Zonă Metropolitană, însumează o populație de aproximativ 430.000 de locuitori.Prima mențiune a localității apare în 1459. În 1862 devine capitala Principatelor Unite.
        \nDe atunci a suferit schimbări continue, devenind centrul scenei artistice, culturale și mass-media românești. \nArhitectura elegantă și atmosfera sa urbană i-au adus în Belle Époque supranumele de „Micul Paris”.\n Deși clădirile și cartierele din centrul istoric au fost deteriorate sau distruse de război, cutremure și chiar programul lui Nicolae Ceaușescu de sistematizare, multe au supraviețuit.\n În ultimii ani, orașul a cunoscut un boom economic și cultural.
        \nConform datelor preliminare din recensământul 2011, 1.677.985 de locuitori trăiesc în limitele orașului, mai puțini față de cifra înregistrată la recensământul din 2002.\nMediul urban se extinde dincolo de limitele Bucureștiului, cu o populație de 1,93 milioane de locuitori.\n Prin adăugarea orașelor satelit din jurul zonei urbane, zona metropolitană a Bucureștiului propusă ar avea o populație de 2,2 milioane de locuitori.\nConform Eurostat, Bucureștiul are o zonă mai mare urbană de 2.151.880 rezidenți.\nPotrivit datelor neoficiale, populația este de peste 3 milioane de locuitori.\n Din punct de vedere economic, București este orașul cel mai prosper din România, și este unul dintre principalele centre industriale și noduri de transport din Europa de Est. \nOrașul are facilități pentru convenții, instituții de învățământ, zone culturale, centre comerciale, și zone de agrement.
        \nOrașul este administrat de Primăria Municipiului București, are același nivel administrativ ca și județele României și este împărțit în șase sectoare.</string>
    <string name="textStudenti">Universitatea Titu Maiorescu\nFacultatea de Informatică\n\nGîscan Nicolae Adelin, grupa 306, ID\nMartiș Nicușor, grupa 306, ID\nSgubeanu George, grupa 308, ID</string>
    <string name="Button1">Vremea</string>
    <string name="Button2">Atracții Turistice</string>
    <string name="Poze">Poze</string>
    <string name="Vremea">Vremea</string>
    <string name="ButonZar">Dă cu zarul</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textzar">1</string>
    <string name="play">Play</string>
    <string name="androdocs">Giscan\nMartis\nSgubeanu</string>

</resources>
