<?xml version="1.0" encoding="utf-8"?>
<layout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/wallpaperbucuresti3"
        android:orientation="vertical"
        tools:context=".Prezentare">

        <!-- TODO: Update blank fragment layout -->


        <TextView
            android:id="@+id/text_titlu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/trade_winds"
            android:text="@string/TextPrezentare"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <Button
            android:id="@+id/button5"
            android:layout_width="149dp"
            android:layout_height="53dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/buton_1"
            android:baselineAligned="false"
            android:duplicateParentState="false"
            android:editable="false"
            android:text="@string/butonDetalii"
            android:textAlignment="center" />

        <ScrollView
            android:id="@+id/scroll_prezentare"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:shadowColor="#FFFFFF"
                android:text="@string/text_prezentare"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </ScrollView>


    </LinearLayout>
</layout>